k8s.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: K8S_APP_NAME
  namespace: K8S_APP_NAME
  labels:
    app: K8S_APP_NAME
spec:
  selector:
    matchLabels:
      app: K8S_APP_NAME
  replicas: K8S_REPLICAS
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: K8S_APP_NAME
        application: app
        enviorment: K8S_APP_ENVIORMENT
        location: K8S_APP_LOCATION
    spec:
      containers:
        - name: K8S_APP_NAME
          image: ACR_IMG_URL
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "1024Mi"
              cpu: "256m"
            limits:
              memory: "2048Mi"
              cpu: "512m"
      imagePullSecrets:
      - name: acr-secret
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - web
                topologyKey: kubernetes.io/hostname
---
apiVersion: v1
kind: Service
metadata:
  name: K8S_APP_NAME
  namespace: K8S_APP_NAME
spec:
  selector:
    app: K8S_APP_NAME
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: K8S_APP_NAME-ingress
  namespace: K8S_APP_NAME
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-max-age: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "125m"
    nginx.org/hsts: "false"
spec:
  rules:
  - host: "APP_URL"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: K8S_APP_NAME
            port:
              number: 80
  tls:
  - hosts:
    - 'APP_URL'
    secretName: cf-dns-cert
